@@ -72,8 +72,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Josef Špaček 2013-2021
-     BSD 2-Clause License
+    © Michal Josef Špaček 2013-2021
+
+    BSD 2-Clause License
 
 VERSION
     0.07
