@@ -1,4 +1,5 @@
 0.07
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update copyright years.
 
 0.06 2018-02-07T07:46:51+01:00
